<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidViewCollection</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="switch_theme">Switch theme</string>
    <string name="appName">SwipeListView Demo</string>
    <string name="open">Open</string>
    <string name="googlePlay">Google Play</string>
    <string name="uninstall">Uninstall</string>
    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Settings</string>
    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="dismiss">Dismiss</string>
    <string name="rightAction">Right Action</string>
    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>
    <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source SwipeListView Android Library by 47 Degrees. Find all source, documentation and packaged downloads at GitHub. Cheers!</string>
    <string name="ok">Ok</string>
    <string name="visit47">Visit 47deg</string>
    <string name="goToGitHub">Go to GitHub</string>
    <string name="dontShow">Don\'t show this message again</string>
    <string name="others">Others</string>
    <string name="loading">Loading</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
</resources>