<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 47 Degrees, LLC
  ~  http://47deg.com
  ~  hello@47deg.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:padding="@dimen/padding_default" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            style="@style/SettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode" />

        <ImageView style="@style/Line" />

        <RadioGroup
            style="@style/SettingContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/mode_both"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both" />

            <RadioButton
                android:id="@+id/mode_right"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />

            <RadioButton
                android:id="@+id/mode_left"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left" />
        </RadioGroup>

        <TextView
            style="@style/SettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftAction" />

        <ImageView style="@style/Line" />

        <RadioGroup
            style="@style/SettingContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/action_left_reveal"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reveal" />

            <RadioButton
                android:id="@+id/action_left_dismiss"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismiss" />
        </RadioGroup>

        <TextView
            style="@style/SettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rightAction" />

        <ImageView style="@style/Line" />

        <RadioGroup
            style="@style/SettingContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/action_right_reveal"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reveal" />

            <RadioButton
                android:id="@+id/action_right_dismiss"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismiss" />
        </RadioGroup>

        <TextView
            android:id="@+id/offset_label_right"
            style="@style/SettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView style="@style/Line" />

        <LinearLayout
            style="@style/SettingContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <SeekBar
                android:id="@+id/offset_right"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/offset_label_left"
            style="@style/SettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView style="@style/Line" />

        <LinearLayout
            style="@style/SettingContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <SeekBar
                android:id="@+id/offset_left"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            style="@style/SettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animationTime" />

        <ImageView style="@style/Line" />

        <LinearLayout
            style="@style/SettingContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/animation_time"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="50dp"
                android:text="0" />

            <TextView
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milliseconds" />
        </LinearLayout>

        <TextView
            style="@style/SettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others" />

        <ImageView style="@style/Line" />

        <CheckBox
            android:id="@+id/open_long_press"
            style="@style/SettingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openOnLongPress" />
    </LinearLayout>

</ScrollView>